Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
       {
         "files": [
           {
-            "pattern": "*.jar",
+            "pattern": "*.zip",
             "target": "artifactory-generic-local"
           }
         ]
