--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,6 @@ pool:
   demands:
   - agent.name -equals Lissencephaly
 
-
 steps:
 - task: Maven@3
   inputs:
@@ -34,11 +33,16 @@ steps:
         "files": [
           {
             "pattern": "*.jar",
-            "target": "artifactory-generic-local"
+            "target": "artifactory-generic-local",
+            "recursive": true
           }
         ]
       }
     failNoOp: true
+    collectBuildInfo: true
+    includeEnvVars: true
+    buildName: 'upload-app-linux-$(Build.SourceBranch)-$(Build.DefinitionName)'
+    buildNumber: '$(Build.BuildNumber)-$(Build.SourceBranch)-$(Build.BuildId)'
 
 
 # - task: ArtifactoryGenericUpload@2
