Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
           {
             "pattern": "*.jar",
             "target": "artifactory-generic-local",
-            "recursive": true
+            "recursive": "true"
           }
         ]
       }
