Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,4 +78,5 @@ steps:
     goals: 'package'
     artifactoryDeployService: 'artifactory'
     targetDeploySnapshotRepo: 'artifactory-generic-local'
+    targetDeployReleaseRepo: 'savourt'
 
