--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,19 @@
     <scope>test</scope>
     
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.codehaus.plexus/plexus-classworlds -->
+<dependency>
+    <groupId>org.codehaus.plexus</groupId>
+    <artifactId>plexus-classworlds</artifactId>
+    <version>2.7.0</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.googlecode.maven-download-plugin/download-maven-plugin -->
+<dependency>
+    <groupId>com.googlecode.maven-download-plugin</groupId>
+    <artifactId>download-maven-plugin</artifactId>
+    <version>1.6.8</version>
+</dependency>
+
  
  <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 <dependency>
