--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ steps:
 - task: ArtifactoryMaven@2
   inputs:
     mavenPomFile: 'pom.xml'
-    goals: 'package'
+    goals: 'clean'
     artifactoryDeployService: 'artifactory'
     targetDeploySnapshotRepo: 'artifactory-generic-local'
     targetDeployReleaseRepo: 'savourt'
